# leem_casestudy

./: .gitignore  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: Case Study - Data Science Intern.docx  conf.py  index.rst
notebooks/: eda.ipynb  feature & modeling.ipynb  submission.csv  tp_high_risk_loans.csv
src/andy/: __init__.py  category.py  datetime.py  eval.py  io.py  model.py  params.py  prep.py
tests/: conftest.py
